--- a/assets/css/sainu.css
+++ b/assets/css/sainu.css
@@ -12299,14 +12299,15 @@ p {
 
 .portfolio .grid-item:nth-child(2),
 .portfolio .grid-item:nth-child(4),
-.portfolio .grid-item:nth-child(6){
-  filter: blur(9px); /* Apply a 90% blur effect to the second row */
+.portfolio .grid-item:nth-child(6) {
+  filter: blur(9px);
+  /* Apply a 90% blur effect to the second row */
   position: relative;
   overflow: hidden;
-  -webkit-filter: blur(6px); 
-	-moz-filter: blur(6px); 
-	-o-filter: blur(6px); 
-	-ms-filter: blur(6px); 
+  -webkit-filter: blur(6px);
+  -moz-filter: blur(6px);
+  -o-filter: blur(6px);
+  -ms-filter: blur(6px);
 }
 
 .grid-item .overlay .overlay-infos {
@@ -12380,27 +12381,35 @@ p {
   -ms-flex-align: center;
   align-items: center;
   margin-bottom: 30px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .testimonial-card-img-holder {
-  min-width: 45px;
-  max-width: 45px;
+  min-width: 100px;
+  max-width: 100px;
   z-index: 999;
+  flex: 1;
+  overflow: hidden;
+  border-radius: 15px;
+  
 }
 
 .testimonial-card-img {
+  margin-left:10px ;
   background: #fff;
   padding: 4px;
   width: 90px;
   height: 90px;
   border-radius: 50%;
+            
 }
 
 .testimonial-card-body {
   text-align: left;
-  border: 1px solid #dee2e6;
   background: #fff;
-  padding: 20px 20px 20px 60px;
+  padding: 20px 20px 20px 30px;
   border-radius: 0;
 }
 
@@ -13529,8 +13538,8 @@ pre .code {
 
 .clients .clients-area .owl-carousel .owl-item img {
   display: block;
-  width: 80%;
-  height: 20%;
+  width: 90%;
+  height: 35%;
   border-radius: 0;
 }
 
@@ -13620,46 +13629,52 @@ pre .code {
   display: flex;
   align-items: center;
   margin: 10px;
-} 
+}
+
 .education .colum-header {
   display: flex;
   align-items: center;
   margin: 10px;
 }
+
 .education .colum-header i {
   margin-right: 10px;
-  margin-bottom: 5px; 
+  margin-bottom: 5px;
 }
+
 .experience .colum-header i {
   margin-right: 10px;
-  margin-bottom: 5px; 
+  margin-bottom: 5px;
 }
+
 .experience .card {
   padding: 15px;
   margin: 10px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 .education .card {
   padding: 15px;
   margin: 10px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 .education .card hr {
   border: 1px solid #000;
 }
+
 .experience .card hr {
   border: 1px solid #000;
 }
-.experience .colum-header i{
+
+.experience .colum-header i {
   font-size: 22px;
 }
-.education .colum-header i{
+
+.education .colum-header i {
   font-size: 22px;
 }
 
 /*-------------------------------------
-
-
-
