--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -15,7 +15,7 @@ body {
 header{
     width: 100%;
     height: 80px;
-    background: red;
+    background: #EB1944;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -112,47 +112,34 @@ header{
     width: 100%; 
 }
 
-
-
 .footer {
-    width: 100%;
+    background-color: #fff;
+    padding: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
     display: flex;
-    min-height: 70px;
-    border-top: 1px solid #dee2e6;
-    align-items: center;
     justify-content: space-between;
-   
-  }
-  
-  .footer p,
-  .footer .social-links {
-    -webkit-box-flex: 1;
-    -webkit-flex-grow: 1;
-    -ms-flex-positive: 1;
-    flex-grow: 1;
-    -webkit-flex-basis: 0;
-    -ms-flex-preferred-size: 0;
-    flex-basis: 0;
-  }
-  
-  .footer a,
-  .footer p {
-    color: #393e46;
-    padding: 4px 0;
-    display: inline-block;
-    margin: 0;
-  }
-  
-  .footer .brand {
+    align-items: center;
+}
+
+.footer a,
+.footer p {
+  color: #393e46;
+  padding: 4px 0;
+  display: inline-block;
+  margin: 0;
+}
+
+.footer .brand {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 6px;
   }
-  
+
   .footer .social-links {
     margin-left: auto;
   }
-  
+
   .footer .social-links a {
     padding: 0;
     height: 40px;
@@ -163,27 +150,20 @@ header{
     border: 2px solid #6c757d;
     color: #6c757d;
   }
-  
+
   .footer .social-links a:hover {
     background: #695aa6;
     border-color: #695aa6;
     color: #fff;
     text-decoration: none;
   }
-  
+
   @media (max-width: 767.98px) {
     .footer {
-      padding: 15px 0;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-      flex-direction: column;
+      padding: 20px ;
+      
     }
   
-    .footer .social-links {
-      margin-top: 15px;
-    }
   }
-
-
+  
+  
