--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +11,7 @@ body {
     background: #fefefe;
 }
 
-header{
+header {
     width: 100%;
     height: 80px;
     background: #EB1944;
@@ -21,19 +20,23 @@ header{
     justify-content: space-between;
     padding: 0 100px;
 }
-.logo{
+
+.logo {
     font-size: 28px;
     font-weight: bold;
     color: #fefefe;
 }
+
 .hamburger {
     display: none;
 
 }
+
 .nav-bar ul {
-    display: flex;  
+    display: flex;
 }
-.nav-bar ul li a{
+
+.nav-bar ul li a {
     display: block;
     color: #fefefe;
     font-size: 20px;
@@ -41,39 +44,45 @@ header{
     border-radius: 50px;
     transition: 0.2s;
     margin: 0 5px;
-}
-.nav-bar ul li a:hover {
-    color: black;
-    background:#fefefe;
-}
-.nav-bar ul li a.active {
-    color: #11101b;
-    background: #fefefe ;
+    text-decoration: none;
 }
 
-@media only screen and (max-width: 1320px){
+.nav-bar ul li a:hover {
+    color: black;
+    background: #fefefe;
+}
+
+.nav-bar ul li a.active {
+    color: #11101b;
+    background: #fefefe;
+}
+
+@media only screen and (max-width: 1320px) {
     header {
         padding: 0 50px;
     }
 }
 
-@media only screen and (max-width: 1100px){
+@media only screen and (max-width: 1100px) {
     header {
         padding: 0 30px;
     }
 }
-@media only screen and (max-width: 765px){
+
+@media only screen and (max-width: 765px) {
     .hamburger {
         display: block;
         cursor: pointer;
     }
-    .hamburger .line{
+
+    .hamburger .line {
         width: 30px;
         height: 3px;
         background: #fefefe;
         margin: 6px;
     }
-    .nav-bar{
+
+    .nav-bar {
         height: 0px;
         position: absolute;
         top: 80px;
@@ -84,9 +93,11 @@ header{
         transition: 0.5s;
         overflow: hidden;
     }
+
     .nav-bar.active {
         height: 350px;
     }
+
     .nav-bar ul {
         display: block;
         width: fit-content;
@@ -95,21 +106,21 @@ header{
         transition: 0.5s;
         opacity: 0;
     }
+
     .nav-bar.active ul {
         opacity: 1;
     }
-    .nav-bar ul li a{
+
+    .nav-bar ul li a {
         margin-bottom: 12px;
-        
+
     }
 }
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
+
+
+
 .container img {
-    width: 100%; 
+    width: 100%;
 }
 
 .footer {
@@ -124,23 +135,23 @@ header{
 
 .footer a,
 .footer p {
-  color: #393e46;
-  padding: 4px 0;
-  display: inline-block;
-  margin: 0;
+    color: #393e46;
+    padding: 4px 0;
+    display: inline-block;
+    margin: 0;
 }
 
 .footer .brand {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 6px;
-  }
+}
 
-  .footer .social-links {
-    margin-left: auto;
-  }
+.footer .social-links {
+    align-items: end;
+}
 
-  .footer .social-links a {
+.footer .social-links a {
     padding: 0;
     height: 40px;
     width: 40px;
@@ -149,21 +160,45 @@ header{
     text-align: center;
     border: 2px solid #6c757d;
     color: #6c757d;
-  }
+}
 
-  .footer .social-links a:hover {
+.footer .social-links a:hover {
     background: #695aa6;
     border-color: #695aa6;
     color: #fff;
     text-decoration: none;
+}
+
+@media (max-width: 767.98px) {
+    .footer {
+        padding: 20px;
+
+    }
+
+}
+
+#scrollToTopBtn {
+    width: 50px;
+    height: 50px;
+    display: none;
+    position: fixed;
+    bottom: 60px;
+    right: 30px;
+    background-color: #000; /* Grey background color */
+    border: none;
+    border-radius: 50%; /* Make it rounded */
+    cursor: pointer;
+    
+    transition: background-color 0.3s ease; /* Add a smooth transition for hover effect */
   }
 
-  @media (max-width: 767.98px) {
-    .footer {
-      padding: 20px ;
-      
-    }
-  
+  #scrollToTopBtn:hover {
+    background-color: #e8d991; /* Beautiful color on hover */
   }
-  
+
+  #scrollToTopBtn i {
+    color: #fff; /* Icon color */
+    font-size: 18px;
+  }
+
   
