--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -123,10 +123,30 @@ header {
     }
 }
 
-
-
-.container img {
+.container img{
     width: 100%;
+}
+
+.container iframe{
+    width: 80%;
+    height: 100%;
+}
+
+.responsive-iframe-container {
+    position: relative;
+    overflow: hidden;
+    margin-left: 6%;
+    margin-right: 6%;
+    padding-top: 56.25%; 
+}
+
+.responsive-iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 .footer {
