--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -138,9 +138,13 @@ header {
     }
 }
 
+.container {
+    margin-top: 80px;
+}
+
+
 .container img{
     width: 100%;
-    margin-top: 80px;
 }
 
 .container iframe{
