--- a/assets/css/sainu.css
+++ b/assets/css/sainu.css
@@ -12585,6 +12585,12 @@ pre .code {
   color: #fff;
 }
 
+.logo-img {
+  
+  margin: 8px;
+  height: 80px;
+}
+
 .custom-navbar .container {
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
@@ -13154,6 +13160,11 @@ pre .code {
   box-shadow: 0 0 2px 1px rgba(0, 100, 186, 0.5);
 }
 
+.about .download-btn:hover{
+ color: white;
+ background: crimson;
+}
+
 
 .about-caption {
   -webkit-box-flex: 1;
@@ -13314,6 +13325,29 @@ pre .code {
   margin-top: 14px;
   text-transform: uppercase;
 }
+
+.experience-container {
+  position: relative;
+  height: 200px;
+  overflow: hidden;
+  transition: height 0.3s ease;
+  margin-bottom: 20px;
+}
+
+.experience-container .show-more-btn {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 5px 10px;
+  cursor: pointer;
+  text-align: center;
+  color: blue;
+  background-color: lightgray;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
 
 .main-timeline {
   position: relative;
@@ -13650,6 +13684,7 @@ pre .code {
 .experience .card {
   padding: 15px;
   margin: 10px;
+  height: 360px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
